# WolfMonitoring

./: README.md  main.py  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  globals.yml  parameters.yml
src/wolfmonitoring/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/wolfmonitoring/pipelines/data_cleaning/: __init__.py  nodes.py  pipeline.py
src/wolfmonitoring/pipelines/data_processing/: nodes.py
